@@ -3,6 +3,7 @@ Changes in QMPlay2 build 15.11.30:
 	- improve QOpenGLWidget performance (Qt5 only, not used by default),
 	- simple visualization shows RMS of displayed signal in side bars,
 	- support for HEVC, VP8 and VP9 decoding in VA-API (not tested!),
+	- falling horizontal lines behave better visualizations,
 	- play next entry after playback error (as default),
 	- support for HEVC decoding in VDPAU,
 	- removed console for Windows,
